--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.10.0",
-    "remark-gfm": "^3.0.1"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
